setting up the app for deploy

--- a/complex-react-app/app/index.html
+++ b/complex-react-app/app/index.html
@@ -23,6 +23,14 @@
       integrity="sha384-GqVMZRt5Gn7tB9D9q7ONtcp4gtHIUEW/yG7h98J7IpE3kpi+srfFyyB/04OV6pG0"
       crossorigin="anonymous"
     ></script>
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@5.1.2/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule=""
+      src="https://unpkg.com/ionicons@5.1.2/dist/ionicons/ionicons.js"
+    ></script>
     <link rel="stylesheet" href="/main.css" />
   </head>
   <body>
